# Star2048

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: 2048_swap_merge.c  cli_main.c  direct_table.c  game.h  gui_main.c  main.c
src/core/: 2048_swap_merge.h  direct_table.c  direct_table.h  game.c
src/gui/: draw_text.c  draw_text.h
